# AnalosNFTLauncher

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  BACKEND-DEPLOYMENT-GUIDE.md  BLOCKCHAIN-INTEGRATION-ROADMAP.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-READY.md  DEPLOYMENT.md  LAUNCHONLOS-DEPLOYMENT-GUIDE.md  PROJECT-REVIEW.md  QUICK-DEPLOY.md  README.md  RENDER-DEPLOYMENT-STEP-BY-STEP.md  TEST-PLAN.md  deploy-hostinger.bat  deploy-hostinger.ps1  deploy-simple.bat  deploy.bat  deploy.sh  env.example  env.production.example  frontend-advanced.html  hostinger-deploy.md  index.html  netlify.toml  package-simple.json  package.json  quick-setup.bat  railway.json  render.yaml  setup-production.bat  setup-production.sh  start-backend.bat  start-dev.bat  start-dev.ps1  start-frontend.bat  start-servers.bat  start-servers.ps1  (+5 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
.turbo/cache/: a94257d433a135ac-meta.json  (+1 more)
backend/: README-MINTING.md  README-NFT-GENERATOR.md  package-simple.json  package.json  railway.json  simple-server.js  tsconfig.json
contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/programs/analos-nft-launcher/src/: lib.rs
contracts/tests/: analos-nft-launcher.ts
frontend/: .eslintrc.js  env.production  next.config.js  package-simple.json  package.json  tailwind.config.js
hostinger-upload/: UPLOAD-INSTRUCTIONS.txt  index.html
netlify/: package.json
scripts/: deploy.sh  setup-dev.sh
shared/: package.json  tsconfig.json
(+64 files in other folders)
